--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,20 +1,20 @@
-<div class='container'>
-    <div class='menu'>
-        {{#link-to 'index'}}
-            <h1>
-                <em>SuperRentals</em>
-            </h1>
-        {{/link-to}}
-        <div class='links'>
-            {{#link-to 'about'}}
-                About
-            {{/link-to}}
-            {{#link-to 'contact'}}
-                Contact
-            {{/link-to}}
-        </div>
+<div class="container">
+  <div class="menu">
+    {{#link-to "index"}}
+      <h1>
+        <em>SuperRentals</em>
+      </h1>
+    {{/link-to}}
+    <div class="links">
+      {{#link-to "about" class="menu-about"}}
+        About
+      {{/link-to}}
+      {{#link-to "contact"}}
+        Contact
+      {{/link-to}}
     </div>
-    <div class='body'>
-        {{outlet}}
-    </div>
+  </div>
+  <div class="body">
+    {{outlet}}
+  </div>
 </div>
